--- a/languages/en.lang
+++ b/languages/en.lang
@@ -59,14 +59,14 @@ users.needObject=Have to be an Object
 
 # includes/handle/handleCommand.js
 
-handleCommand.userBanned=⛔️~Tu Banned Hai Re 🤭!~🚫\n%1\n%2\nContact B0T Owner PRINCE MORSHED 🖤 For Unban ⚠️
-handleCommand.threadBanned=⛔️Your Thread/Box/Group Has Been Banned!⛔️\n%1\n%2 Please Contact Owner Prince Morshed For Unban ⚠️
-handleCommand.commandNotExist=•┄┅═══❁PRINCE MORSHED❁═══┅┄•
+handleCommand.userBanned=⛔️~Tu Banned Hai Re 🤭!~🚫\n%1\n%2\nContact B0T Owner 𝙿𝚁𝙸𝙽𝙲𝙴 𝙼𝙾𝚁𝚂𝙷𝙴𝙳 🖤 For Unban ⚠️
+handleCommand.threadBanned=⛔️Your Thread/Box/Group Has Been Banned!⛔️\n%1\n%2 Please Contact Owner 𝙿𝚁𝙸𝙽𝙲𝙴 𝙼𝙾𝚁𝚂𝙷𝙴𝙳 For Unban ⚠️
+handleCommand.commandNotExist=•┄┅═══❁𝙿𝚁𝙸𝙽𝙲𝙴 𝙼𝙾𝚁𝚂𝙷𝙴𝙳❁═══┅┄•
 handleCommand.commandThreadBanned=Your thread is unable to use command "%1"
 handleCommand.commandUserBanned=You are unable to use command "%1"
 handleCommand.threadNotAllowNSFW=Your thread is not allowed to use NSFW commands
 handleCommand.cantGetInfoThread=Can't get your thread's info, error: %1
-handleCommand.permssionNotEnough= •┄┅═══❁PRINCE MORSHED❁═══┅┄•
+handleCommand.permssionNotEnough= •┄┅═══❁𝙿𝚁𝙸𝙽𝙲𝙴 𝙼𝙾𝚁𝚂𝙷𝙴𝙳❁═══┅┄•
 handleCommand.cantSetMessageReaction=Having some unexpected error at setMessageReaction, error: %1
 handleCommand.executeCommand=[ %1 ] Command used: %2 by user: %3 at thread: %4 | Args included: %5 | Processing time: %6ms
 handleCommand.commandError=Having some unexpected error when using command %1, error: %2
